fix for alignment issue in mobile screens

--- a/src/components/contacts.css
+++ b/src/components/contacts.css
@@ -104,6 +104,6 @@ input:-internal-autofill-selected {
 
   input,
   textarea {
-    min-width: none;
+    width: inherit;
   }
 }
